@@ -2,11 +2,13 @@
 module Mail
   class AttachmentsList < Array
 
-    def initialize(parts_list)
+    def initialize(parts_list, body_attachment = nil)
       @parts_list = parts_list
       @content_disposition_type = 'attachment'
-      parts_list.map { |p|
-        if p.mime_type == 'message/rfc822'
+      [body_attachment].concat(parts_list).map { |p|
+        if p.nil?
+          nil
+        elsif p.mime_type == 'message/rfc822'
           Mail.new(p.body.encoded).attachments
         elsif p.parts.empty?
           p if p.attachment?
